- Fix gap in old Safari versions - Maybe fix Safari 10

--- a/src/co/bookmarks/item/actions.module.styl
+++ b/src/co/bookmarks/item/actions.module.styl
@@ -6,7 +6,7 @@
     top: var(--padding-medium)
     display: inline-grid
     grid-auto-flow: column
-    gap: var(--padding-small)
+    grid-gap: var(--padding-small)
     justify-content: start
     display: none
     //transition: opacity .1s linear
