--- a/src/co/bookmarks/item/view.module.styl
+++ b/src/co/bookmarks/item/view.module.styl
@@ -75,7 +75,7 @@
     display: grid
     grid-auto-flow: row
     align-content: flex-start
-    gap: calc(var(--padding-mini) / 2)
+    grid-gap: calc(var(--padding-mini) / 2)
 
     em {
         font-weight: 600
@@ -158,7 +158,7 @@
 .list, .simple {
     display: grid
     grid-template-columns: auto 1fr
-    gap: var(--padding-medium)
+    grid-gap: var(--padding-medium)
     padding: var(--padding-medium)
 
     &:before {
