--- a/src/co/common/button/index.module.styl
+++ b/src/co/common/button/index.module.styl
@@ -7,7 +7,7 @@
     padding: 0 var(--padding-small)
     display: inline-grid
     grid-auto-flow: column
-    gap: var(--padding-small)
+    grid-gap: var(--padding-small)
     align-items: center
     justify-content: start
     border-radius: var(--border-radius)
