--- a/src/co/common/form/layout.module.styl
+++ b/src/co/common/form/layout.module.styl
@@ -19,7 +19,7 @@
 .layout[data-type='grid'] {
     padding: var(--padding-medium)
     grid-template-columns: auto 1fr
-    gap: var(--padding-medium)
+    grid-gap: var(--padding-medium)
     align-items: center
 
     > .layout {
@@ -37,13 +37,13 @@
     margin: var(--padding-mini) 0
     display: grid
     grid-template-columns: 1fr 1fr
-    gap: var(--padding-medium)
+    grid-gap: var(--padding-medium)
 }
 
 .buttons {
     display: grid
     grid-auto-flow: column
-    gap: var(--padding-small)
+    grid-gap: var(--padding-small)
     justify-content: flex-end
     align-items: center
     grid-column: 1 / -1
