--- a/src/co/common/form/progress.module.styl
+++ b/src/co/common/form/progress.module.styl
@@ -1,7 +1,7 @@
 .wrap {
     display: grid
     grid-template: auto / 1fr auto
-    gap: var(--padding-small)
+    grid-gap: var(--padding-small)
     padding: var(--padding-mini) 0
 }
 
