--- a/src/co/common/form/radio.module.styl
+++ b/src/co/common/form/radio.module.styl
@@ -1,7 +1,7 @@
 .wrap {
     display: grid
     grid-auto-flow: column
-    gap: var(--padding-small)
+    grid-gap: var(--padding-small)
     align-items: center
     justify-content: start
     height: var(--button-height)
