--- a/src/routes/account/social/index.module.styl
+++ b/src/routes/account/social/index.module.styl
@@ -1,7 +1,7 @@
 .buttons {
     display: grid
     grid-auto-flow: column
-    gap: var(--padding-small)
+    grid-gap: var(--padding-small)
 }
 
 .facebook {
