--- a/src/routes/settings/app/theme.module.styl
+++ b/src/routes/settings/app/theme.module.styl
@@ -1,7 +1,7 @@
 .selector {
     display: inline-grid
     grid-auto-flow: column
-    gap: var(--padding-medium)
+    grid-gap: var(--padding-medium)
 }
 
 .theme {
@@ -34,7 +34,7 @@
         display: grid
         grid-template-columns: 1fr 1fr 1fr
         grid-template-rows: .15rem .15rem
-        gap: var(--padding-mini)
+        grid-gap: var(--padding-mini)
 
         span {
             background: var(--shadow-color)
